--- a/src/style.css
+++ b/src/style.css
@@ -3,4 +3,10 @@ h1{
   color:red
 }
 
-img{display:block;width:1000px;height:700px;margin:5px;background-color:#eee}
+img{display:block;width:250px;height:125px;margin:5px;background-color:#eee}
+
+.img_500x200{width:500px;height:200px;}
+.img_400X150{width:400px;height:150px;}
+.img_120X60{width:120px;height:60px;}
+.img_1000X500{width:1000px;height:500px;}
+.img_2000X1000{width:2000px;height:1000px;}
